# tictactoe

ticTacToeClient/: .gitignore
ticTacToeClient/app/: build.gradle  proguard-rules.pro
ticTacToeClient/app/src/androidTest/java/com/example/algo/tictactoe/: ExampleInstrumentedTest.kt
ticTacToeClient/app/src/main/: AndroidManifest.xml
ticTacToeClient/app/src/main/java/com/example/algo/tictactoe/: GameState.kt  MainActivity.kt  RestAPI.kt  TTTApi.kt
ticTacToeClient/app/src/main/res/layout/: activity_main.xml
ticTacToeClient/app/src/main/res/values/: colors.xml  styles.xml
ticTacToeClient/app/src/test/java/com/example/algo/tictactoe/: GameStateTest.kt
ticTacToeClient/gradle/wrapper/: gradle-wrapper.properties
ticTacToeServer/: hattt.cabal
ticTacToeServer/src/: Main.hs
ticTacToeServer/test/: Spec.hs
