name:                hattt
version:             0.1.0
synopsis:            Haskell backend for Tic Tac Toe game
description:         See README.md
homepage:            https://github.com/anddani/hattt
license:             BSD3
license-file:        LICENSE
author:              Andre Danielsson
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type:       git
    location:   https://github.com/anddani/hattt

executable hattt
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base
                       , aeson
                       , scotty
                       , split
                       , text
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , hspec >= 1.3
  default-language:    Haskell2010
